fix(f102-creditsthousands): Server-Boot-Crash — defineInList mit List.of warf NPE beim Anlegen der frischen eclipse-credits-budget.toml (ConfigTracker.createDefaultConfig korrigiert mit ValueSpec.test(null), und List.of(...).contains(null) wirft NPE statt false); Arrays.asList toleriert die null-Probe
Co-authored-by: MedusaV9 <MedusaV9@users.noreply.github.com>